--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html,body{
+  background:rgb(61, 61, 61);
   height:100vh;
-  width:100vw;
+  width:99vw;
+  
 }
 
 body {
@@ -10,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
 }
 
 code {
