--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-html,body{
-  background:rgb(61, 61, 61);
-  height:100vh;
-  width:99vw;
-  
+#root {
+  height: 100vh;
+ 
 }
 
 body {
@@ -13,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
+
   
 }
 
@@ -20,3 +19,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
