Changed styling of navbar as well as the colors of the home page

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,9 @@
 body{
-  background-color: black;
-  background:black;
+  background-color: rgb(190, 190, 190);
   
+}
+
+.homeContainer{
+  background:grey;
+  height:100vh;
 }
