--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html,
+body{
+  min-height:100vh;
+}
+
 #root {
   height: 100vh;
  
@@ -10,8 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
-
+  background:black;
   
 }
 
